--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,12 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+    <Button
+            android:text="SCANNER QR"
+            android:id="@+id/btn_scan"
+            android:layout_width="103dp"
+            android:layout_height="49dp"
+            tools:layout_editor_absoluteY="341dp"
+            tools:layout_editor_absoluteX="154dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
