--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,22 @@
 
     <Button
             android:text="SCANNER QR"
+            android:textSize="13dp"
             android:id="@+id/btn_scan"
             android:layout_width="103dp"
             android:layout_height="49dp"
-            tools:layout_editor_absoluteY="341dp"
-            tools:layout_editor_absoluteX="154dp"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"/>
+
+    <EditText
+            android:layout_width="match_parent"
+            android:id="@+id/et_value"
+            android:inputType="textMultiLine"
+            android:layout_height="wrap_content"
+    />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
